# TMoe

./: .gitignore  README.md  build.gradle  build.gradle.kts  common.gradle  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: pr_ci.yml  push_ci.yml
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/cc/ioctl/tmoe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/tmoe_core/: NativeInit.cpp  NativeInit.h  TMoeJNI.cpp  TMoeJNI.h  version.c
app/src/main/cpp/utils/: CMakeLists.txt  FileMemMap.cpp  FileMemMap.h  HashMap.h  ProcessUtils.cpp  ProcessUtils.h  Rva.h  SharedBuffer.cpp  SharedBuffer.h  TextUtils.cpp  TextUtils.h  Uuid.cpp  Uuid.h  auto_close_fd.cpp  auto_close_fd.h  io_utils.cpp  io_utils.h  shared_memory.cpp
app/src/main/cpp/utils/elfsym/: ElfView.cpp  ElfView.h  ProcessView.cpp  ProcessView.h
app/src/main/cpp/utils/log/: AndroidLog.cpp  AndroidLog.h  Log.cpp  Log.h
app/src/main/java/cc/ioctl/tmoe/: MainStartInit.java
app/src/main/java/cc/ioctl/tmoe/base/: AppCompatTransferActivity.java  BaseProxyFragment.java  DynamicHookInit.java  MainStartInit.java
app/src/main/java/cc/ioctl/tmoe/base/annotation/: FunctionHookEntry.java
app/src/main/java/cc/ioctl/tmoe/fragment/: AboutFragment.kt  SettingsFragment.java  SettingsFragment.kt
app/src/main/java/cc/ioctl/tmoe/hook/: SettingEntryHook.java
app/src/main/java/cc/ioctl/tmoe/hook/base/: BaseDynamicHook.java  CommonDynamicHook.java  DynamicHook.java
app/src/main/java/cc/ioctl/tmoe/hook/core/: Initializable.java  InvalidationHook.java  ProfileActivityRowHook.java  SettingEntryHook.java
app/src/main/java/cc/ioctl/tmoe/hook/func/: AddInfoContainer.kt  AddReloadMsgBtn.java  AddSubItemChannel.kt  AntiAntiCopy.kt  AntiAntiForward.kt  ChannelDetailNumbers.kt  DatabaseCorruptionWarning.kt  DisableInstantCamera.kt  DisablePremiumStickerAnimation.kt  DisableQuickReaction.kt  DumpGroupMember.kt  EnableDebugMode.java  ExtendedOfflineSearch.kt  ForceBlurChatAvailable.kt  FuckTrackingHook.kt  HidePhoneNumber.kt  HidePremiumStickerSetTab.kt  HideServiceStories.kt  HideSponsoredMsg.kt  HideUserAvatar.java  HistoricGroupMemberRecord.kt  HistoricalNewsOption.kt  KeepVideoMuted.kt  LocalGroupMemberList.kt  MutualContactsBtnOption.kt  ProhibitChannelSwitching.kt  ProhibitChatGreetings.kt  ProhibitEnableReactions.kt  ProhibitSpoilers.kt  RestrictSaveMitigation.java  RestrictSaveMitigation.kt  SendCommand.kt  ShowExactLastSeenTime.kt  ShowIdInProfile.kt  ShowMsgId.java  TgnetLogControlStartupApplyHelper.kt  TgnetLogController.java  UseSystemEmoji.kt  (+1 more)
app/src/main/java/cc/ioctl/tmoe/lifecycle/: ActProxyMgr.java  CounterfeitActivityInfoFactory.java  Parasitics.java
app/src/main/java/cc/ioctl/tmoe/rtti/: Bidirectional.java  IProxyFragmentObject.java  ProxyFragmentImplDexCreator.java  ProxyFragmentRttiHandler.java
app/src/main/java/cc/ioctl/tmoe/startup/: HookEntry.java  HybridClassLoader.java  NativeLoader.java  StartupHook.java  StartupRoutine.java
app/src/main/java/cc/ioctl/tmoe/td/: AccountController.java  RequestInterceptor.kt
app/src/main/java/cc/ioctl/tmoe/ui/: LayoutHelper.java  LocaleController.java  Theme.java  ThemeDescription.java  ThemeManager.java  ___WindowIsTranslucent.java
app/src/main/java/cc/ioctl/tmoe/util/: CloneUtils.java  CommonContextWrapper.java  DexFieldDescriptor.java  DexMethodDescriptor.java  HookUtils.java  HookUtils.kt  HostFirstClassReferencer.java  HostInfo.java  Initiator.java  IoUtils.java  Log.java  MultiProcess.java  PrimTypes.java  Reflex.java  SavedInstanceStatePatchedClassReferencer.java  SyncUtils.java  Utils.java
app/src/main/res/drawable/: ic_refresh_24.xml  ic_setting_hex_outline_24.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/cc/ioctl/tmoe/: ExampleUnitTest.java
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: Common.kt  Versions.kt  build-logic.android.application.gradle.kts  build-logic.android.base.gradle.kts  build-logic.android.library.gradle.kts  build-logic.root-project.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/ksp/: build.gradle.kts
(+44 files in other folders)
